[gd_scene load_steps=21 format=3 uid="uid://xqckunj3gk4p"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0fhkd"]
[ext_resource type="Texture2D" uid="uid://drlu7rghl0wr8" path="res://art/cowboizardidle-Sheet.png" id="2_j5dup"]
[ext_resource type="Texture2D" uid="uid://8k3f7ybku71q" path="res://art/cowboizardwalk-Sheet.png" id="3_6fpi4"]
[ext_resource type="Texture2D" uid="uid://toh53vwqusqc" path="res://art/cowboizardstand.png" id="3_mdig1"]
[ext_resource type="AudioStream" uid="uid://boc4s3qp6udtu" path="res://Music/Shadows of Defeat.mp3" id="6_56u6r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rn4u"]
radius = 15.0
height = 118.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ojl"]
atlas = ExtResource("2_j5dup")
region = Rect2(0, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t31o"]
atlas = ExtResource("2_j5dup")
region = Rect2(124, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_u48ls"]
atlas = ExtResource("2_j5dup")
region = Rect2(248, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34rk"]
atlas = ExtResource("2_j5dup")
region = Rect2(372, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dxdu"]
atlas = ExtResource("2_j5dup")
region = Rect2(496, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_11luw"]
atlas = ExtResource("2_j5dup")
region = Rect2(620, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_rud8k"]
atlas = ExtResource("2_j5dup")
region = Rect2(744, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4fiy"]
atlas = ExtResource("2_j5dup")
region = Rect2(868, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_318b5"]
atlas = ExtResource("3_6fpi4")
region = Rect2(0, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_w84la"]
atlas = ExtResource("3_6fpi4")
region = Rect2(124, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3lwu"]
atlas = ExtResource("3_6fpi4")
region = Rect2(248, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxnuh"]
atlas = ExtResource("3_6fpi4")
region = Rect2(372, 0, 124, 124)

[sub_resource type="SpriteFrames" id="SpriteFrames_foyrw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ojl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t31o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u48ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dxdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11luw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rud8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4fiy")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("3_mdig1")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 0.5,
"texture": ExtResource("3_mdig1")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 0.5,
"texture": ExtResource("3_mdig1")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Invincible",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_318b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w84la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3lwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxnuh")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vfks"]
size = Vector2(46, 124)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0fhkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(549, 280)
shape = SubResource("CapsuleShape2D_5rn4u")

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(550, 279)
sprite_frames = SubResource("SpriteFrames_foyrw")
animation = &"Invincible"
frame_progress = 0.539197

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(546, 281)

[node name="player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(553, 282)
shape = SubResource("RectangleShape2D_1vfks")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.949

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(547, 285)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Health" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 40.0
offset_top = -9.0
offset_right = 371.0
offset_bottom = 18.0
show_percentage = false

[node name="invincible" type="Timer" parent="."]
wait_time = 1.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_56u6r")

[node name="Mana" type="ProgressBar" parent="."]
offset_left = 40.0
offset_top = 31.0
offset_right = 258.0
offset_bottom = 58.0
show_percentage = false

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="player" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="player" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="invincible" to="." method="_on_invincible_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
